Updating drafts for Nov/Dec '24

--- a/2024/2024-11-24.md
+++ b/2024/2024-11-24.md
@@ -28,11 +28,15 @@ On to the week's other notable headlines:
 
 - **Chipmaker Nvidia reported record quarterly earnings Wednesday,** boosted by its sales to the burgeoning AI market. However, its stock was little changed due to the astronomical expectations investors have already priced in to any stock remotely related to AI. ([Fortune](https://news.google.com/read/CBMipgFBVV95cUxONVFhb0dpN2k2MnNXNFRIZ25BV2h0bFJtbDN2LUxPV3VNR2IwckpEajAtdkhGVVlsSjc0eXhhZlpMWU5mamRpX0VGek5qTzdkMzJWME1xRElZRER2d2FMNjlLWmt6LVNQRlZmM3lUOFVRYTJPdWNSV05pLWs2V3BiR21jdDRBSlA5ZXVYM0l1QkVKZGJ5RWNpangxblBJTmVvU0Y0b0tn?hl=en-US&gl=US&ceid=US%3Aen))
 
-- **The U.S. Department of Justice** wants a federal judge in an antitrust case against Google to force the search giant to sell its Chrome web browser. ([Wall Street Journal](https://www.wsj.com/tech/google-should-be-forced-to-sell-chrome-browser-justice-department-says-13602df9?st=dxx5vR&reflink=desktopwebshare_permalink))
+- **Good news for Google:** Researchers at the company's Deepmind unit say in a new research paper that they may have discovered a new AI-assisted technique that would enable wider use of quantum computing. ([Decrypt](https://decrypt.co/292918/ai-breakthrough-brings-quantum-computing-closer-to-real-world-applications))
+
+- **Bad news for Google:** The U.S. Department of Justice wants a federal judge in an antitrust case against Google to force the search giant to sell its Chrome web browser. ([Wall Street Journal](https://www.wsj.com/tech/google-should-be-forced-to-sell-chrome-browser-justice-department-says-13602df9?st=dxx5vR&reflink=desktopwebshare_permalink))
 
 - **Mastercard and JPMorgan are partnering** to offer blockchain-based international payments. ([CoinDesk](https://www.coindesk.com/business/2024/11/21/mastercard-and-jpmorgan-link-up-to-bring-foreign-exchange-on-the-blockchain/))
 
 - **DCG founder Barry Silbert** is launching a decentralized AI company dubbed Yuma. The startup is the latest high-profile bet on the intersection of blockchain and AI. ([Wall Street Journal](https://www.wsj.com/finance/currencies/the-crypto-magnate-barry-silbert-pins-his-comeback-on-ai-18261299?st=dZN6Mt&reflink=desktopwebshare_permalink))
+
+- **A new study from Harvard and the University of Michigan** suggests that AI models "secretly" learn new capabilities before they show them to users. ([Decrypt]())
 
 - **Researchers at New York's Stony Brook University** published a new study of "typosquatting" crypto scams in which criminals exploit tiny misspellings in on-chain web addresses to trick people into sending tokens to the scammers' wallets. Yikes. ([Fast Company](https://www.fastcompany.com/91228285/scammers-are-making-thousands-of-dollars-through-blockchain-typosquatting))
 
