--- a/2024/2024-12-01.md
+++ b/2024/2024-12-01.md
@@ -1,70 +1,60 @@
-<!--
-
-Daily social posts...
-
--->
-
-# TKTKTK
+# Giving Bluesky a try
 ## Week in Review: Nov. 24-30, 2024
 
-![Investor holding up a physical ether coin](https://w3w.news/img/eth-2048.jpg)
-*Unedited photo by Ivan Radic via [Flickr](https://www.flickr.com/people/26344495@N05/) under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/).*
+![Blue butterfly](https://w3w.news/img/krzysztof-niewolny-1920.jpg)
+*Photo by Krzysztof Niewolny via Unsplash*
 
-<!-- 100-word intro.
+**Unless you've been living under a very large rock,** it's been impossible recently to escape mainstream press coverage of Bluesky, the latest red-hot social platform. Heck, Bluesky's [growth surge](https://www.fastcompany.com/91230935/the-website-tracks-how-fast-bluesky-is-growing-in-near-real-time) has been so obvious, even CNN [has noticed](https://www.youtube.com/watch?v=Xa-EvA95Eqw&t=2s&pp=ygUVQmx1ZXNreSBpbnRlcnZpZXcgQ05O).
 
-Riff on quote by Friedman ~18 mins into UK interview you recently watched on YouTube. He makes a great point: AI was not mentioned at all during the recent U.S. presidential election. Yikes...
+(Seriously, CNN. I kid because I love. But anyway...)  
 
--->
+I've now joined Bluesky myself using the handle [@peteramckay.bsky.social](https://bsky.app/profile/peteramckay.bsky.social). If you're on Bluesky, please give me a follow! Let's connect there as well.
+
+In general, the main catalyst for user interest in Bluesky has been the increasing politicization of X/Twitter owner Elon Musk as [a right-wing apparatchik](https://www.cnn.com/2024/11/29/politics/musk-trump-thanksgiving-mar-a-lago/index.html). People who are concerned about that, and about his obvious manipulation of X/Twitter to align with his current politics, have been looking for alternative venues for their own social posts.
+
+Thus Bluesky, which [began](https://techcrunch.com/2024/11/19/what-is-bluesky-everything-to-know-about-the-x-competitor/) as an open-source side project by a developer team at the pre-Musk Twitter, now has the momentum.
+
+To be honest, I've been thinking about joining for some time now, even prior to the recent publicity surge. Bluesky first caught my attention because of its decentralized server architecture, using a concept called [federation](https://www.techopedia.com/definition/2500/federation) that's more akin to how email works than a traditional social site like X/Twitter, Instagram, or TikTok.  
+
+But the last straw, the thing that finally moved me to sign up at Bluesky, was the recent [confirmation](https://newrepublic.com/post/188794/elon-musk-admits-x-censor-news-articles) that Musk has purposefully de-prioritized promotion of posts containing links in X/Twitter's algorithm. This is particularly harmful for purposes of sharing high-quality news -- *the whole reason I signed up for Twitter in the first place back in October 2008.*
+
+At the time, I was a markets reporter for the Wall Street Journal covering the biggest financial crisis in U.S. history since the Great Depression. I figured it would be a good idea to share links to my stories, and other crisis-related information that might help people.
+
+How quaint.
+
+Ever since, sharing news has been a staple of my account. But if X/Twitter management doesn't really want me doing that anymore, I'll gladly take my ball and go elsewhere, thanks.
+
+That said, I'm not going to delete my X/Twitter account, as some new Bluesky users have. There are some real downsides to that from a security standpoint, as Lifehacker aptly covered [here](https://lifehacker.com/dont-delete-your-twitter-account-do-this-instead-1849779710).
+
+Rather, I've already been using Musk-era X/Twitter less than before. Now I'll continue to fade it even more, increase usage on Bluesky, and see how things go from there.
 
 ### Week in Review: Nov. 24-30, 2024
 
-- Google news searches... Blockchain: https://news.google.com/search?q=blockchain&hl=en-US&gl=US&ceid=US%3Aen | Crypto: https://news.google.com/search?q=crypto&hl=en-US&gl=US&ceid=US%3Aen | Web3: https://news.google.com/search?q=web3&hl=en-US&gl=US&ceid=US%3Aen
+- **The native token for Virtuals,** a protocol for tokenized AI agents, has [rallied sharply](https://decrypt.co/294137/virtuals-protocol-tokens-skyrocket-as-ai-agent-demand-grows) to hit a $1.5 billion valuation thanks to rising demand for tools that help integrate web3 with AI. The token's popularity also highlights the recent growth of Coinbase's Base platform. It has also seen heavy usage [for launching memecoins](https://www.coindesk.com/tech/2024/11/28/memecoins-show-coinbases-base-blockchain-isnt-so-centralized-founder-says).
 
-<!-- Leftovers from last week...
+- **On-chain democracy in action:** Jupiter, a Solana-based decentralized exchange, will revise its token airdrop plan after a governance proposal did not reach a required 70% supermajority in a vote among its community members. ([Decrypt](https://decrypt.co/294099/solana-jupiter-revise-airdrop-1-6-billion))
 
-- CNBC coverage of ATH Thursday: https://www.cnbc.com/2024/11/21/crypto-market.html | Trump trying to create crypto czar. Cardano exec recommends Coinbase's Armstrong: https://www.benzinga.com/markets/cryptocurrency/24/11/42114875/coinbase-ceo-brian-armstrong-stands-out-as-candidate-for-donald-trumps-reported-crypto-czar-position-cardano-co-founder-says
+- **The post-election crypto rally slowed but still produced some bright spots.** The global token market's valuation rose to a record $3.6 trillion, helped by a 7-day gain of 1% for bitcoin as of Sunday afternoon in New York. Ripple is [up 44%](https://coinmarketcap.com/currencies/xrp/) for the week, trading at its highest level in [nearly seven years](https://www.coindesk.com/markets/2024/12/01/xrp-tops-100-b-market-cap-reaches-2018-levels-as-ripple-s-rlusd-close-to-approval) on speculation New York state regulators will approve Ripple's plan to offer a new stablecoin.
 
-- https://wtfhappenedin1971.com/
+- **Tornado Cash scored a major courtroom victory against U.S. regulators.** A three-judge panel ruled that the Treasury Department's sanctions-enforcement arm had overstepped its legal authority in penalizing Tornado Cash, a crypto-mixing service that anonymizes transactions. ([Cointelegraph](https://www.msn.com/en-us/money/companies/big-victory-in-tornado-cash-case-as-judge-says-ofac-exceeded-authority/ar-AA1uOzFT))
 
+- **A federal judge spared FTX co-founder Gary Wang** from serving any prison time due to his cooperation in the government's prosecution of exchange CEO Sam Bankman-Fried. Wang was sentenced to three years of unsupervised release and time served for each of the four criminal counts he pleaded guilty to. ([UPI](https://www.msn.com/en-us/money/companies/ftx-executive-and-co-founder-gary-wang-gets-no-jail-time-for-role-in-crypto-collapse/ar-AA1urMNh))
 
-- Armstrong shouts out DOGE
+- **The Wall Street Journal's Dave Michaels** wrote a [nice overview](https://www.wsj.com/finance/regulation/trump-crypto-us-war-0b91cc21?st=NK9VD4&reflink=desktopwebshare_permalink) of the several crypto enforcement cases pending in U.S. federal courts that may be dropped by the incoming Trump administration.
 
+- **Duh.** Former Meta executive David Marcus [tweeted a lengthy post mortem](https://x.com/davidmarcus/status/1862654506774810641) of the social giant's failed stablecoin project. (You may recall, it was dubbed Libra at first, then Diem toward the end.) Marcus says the project's demise was "100% a political kill" by national governments that was "executed through intimidation of captive banking institutions."
 
-- McCormack episode: https://whatbitcoindid.libsyn.com/steve-baker-on-why-government-is-failing-you-mob020
-
-- McCormack homepage: tk
-
-- AI + memcoins? Dishman post: https://www.linkedin.com/posts/jackdishman_clankers-world-activity-7261433725161279488-nteP?utm_source=share&utm_medium=member_desktop | Clanker: https://www.clanker.world/clanker | a16z podcast
-
-- Armstrong Meeting with Trump. Elon involvement in New admin/relationship souring, etc.
-
-- New proposal in TK to ban social media for anyone under 16.
-
-- Baakt may sell to Trump Media. https://www.cnbc.com/2024/11/18/trump-media-in-reported-talks-to-buy-crypto-trading-platform-bakkt-sending-shares-soaring.html
-
-- Goldman Sachs may be selling its digital assets platform soon.
-
--->
-
-- tk
-
-- tk
-
-- tk
+- **RSS pioneer Dave Winer** is proposing [new podcasting features](https://x.com/davewiner/status/1862570906200977565?t=eNyJ0Rty49HIJbJ0dz61mQ&s=09) for the open syndication protocol that would effectively protect it from centralized services like Spotify, Google, and Audible. Hmmm...
 
 ### Community
 
-- **We have great exclusive content coming for paid subscribers to w3w!** For Founding Members, I'm working on a Year in Review & 2025 Outlook that will go out in December covering important trends to look for in emerging tech. At all paid tiers, I'll also be offering an Intro to Web3 webinar to cover the basics of decentralization. Don't miss out! [Upgrade to a paid subscription today.](https://w3wnews.substack.com/subscribe)   
+- **We have great exclusive content coming for paid subscribers to w3w!** For Founding Members, I'm working on a Year in Review & 2025 Outlook that will go out soon covering important trends to look for in emerging tech in the New Year. At all paid tiers, I'll also be offering an Intro to Web3 webinar to cover the basics of decentralization. Don't miss out! [Upgrade to a paid subscription on Substack today.](https://w3wnews.substack.com/subscribe)   
 
 ### Odds & Ends
 
-<!-- Some evergreens left over from last week... -->
+- **ICYMI:** Ken Burns' new 2-hour documentary covering the life of Leonardo da Vinci is now available to [watch for free](https://www.pbs.org/kenburns/leonardo-da-vinci/) on the Public Broadcasting Service's website.
 
-- US colleges are getting easier to get into. https://www.washingtonpost.com/education/2024/11/18/college-acceptance-rates-easier-to-get-in/
-
-- Giraffes becoming endangered: https://www.washingtonpost.com/climate-environment/2024/11/20/giraffes-endangered-species/
-
-- New Ken Burns documentary on Da Vinci: https://www.thirteen.org/programs/leonardo-da-vinci/leonardo-da-vinci-part-one-the-disciple-of-experience/ | <!-- Check for ep2 link over the weekend -->
+- **Tron founder Justin Sun ate his $6.2 million banana,** recently purchased at a Sotheby's "art" auction. It is somehow both incongruous and unsurprising that he did so at [an elaborate public event](https://www.coindesk.com/web3/2024/11/29/i-watched-justin-sun-eat-the-worlds-most-expensive-banana-i-dont-get-it) while flanked by bodyguards and advisers. 🤦‍♀️
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
