--- a/2024/2024-12-01.md
+++ b/2024/2024-12-01.md
@@ -16,15 +16,13 @@ Thus Bluesky, which [began](https://techcrunch.com/2024/11/19/what-is-bluesky-ev
 
 To be honest, I've been thinking about joining for some time now, even prior to the recent publicity surge. Bluesky first caught my attention because of its decentralized server architecture, using a concept called [federation](https://www.techopedia.com/definition/2500/federation) that's more akin to how email works than a traditional social site like X/Twitter, Instagram, or TikTok.  
 
-But the last straw, the thing that finally moved me to sign up at Bluesky, was the recent [confirmation](https://newrepublic.com/post/188794/elon-musk-admits-x-censor-news-articles) that Musk has purposefully de-prioritized promotion of posts containing links in X/Twitter's algorithm. This is particularly harmful for purposes of sharing high-quality news -- *the whole reason I signed up for Twitter in the first place back in October 2008.*
+But the last straw, the thing that finally moved me to pull the trigger on signing up at Bluesky, was the recent [confirmation](https://newrepublic.com/post/188794/elon-musk-admits-x-censor-news-articles) that Musk has purposefully de-prioritized promotion of posts containing links in X/Twitter's algorithm. This is particularly harmful for purposes of sharing high-quality news -- *the whole reason I signed up for Twitter in the first place back in October 2008.*
 
-At the time, I was a markets reporter for the Wall Street Journal covering the biggest financial crisis in U.S. history since the Great Depression. I figured it would be a good idea to share links to my stories, and other crisis-related information that might help people.
-
-How quaint.
+At the time, I was a markets reporter for the Wall Street Journal covering the biggest financial crisis in U.S. history since the Great Depression. I figured it would be a good idea to share links to my stories and other crisis-related information that might help people.
 
 Ever since, sharing news has been a staple of my account. But if X/Twitter management doesn't really want me doing that anymore, I'll gladly take my ball and go elsewhere, thanks.
 
-That said, I'm not going to delete my X/Twitter account, as some new Bluesky users have. There are some real downsides to that from a security standpoint, as Lifehacker aptly covered [here](https://lifehacker.com/dont-delete-your-twitter-account-do-this-instead-1849779710).
+That said, I'm not going to delete my X/Twitter account altogether, as some new Bluesky users have. There are some real downsides to that from a security standpoint, as Lifehacker aptly covered [here](https://lifehacker.com/dont-delete-your-twitter-account-do-this-instead-1849779710).
 
 Rather, I've already been using Musk-era X/Twitter less than before. Now I'll continue to fade it even more, increase usage on Bluesky, and see how things go from there.
 
