--- a/2024/2024-12-08.md
+++ b/2024/2024-12-08.md
@@ -4,27 +4,119 @@
 ![Investor holding up a physical ether coin](https://w3w.news/img/eth-2048.jpg)
 *Unedited photo by Ivan Radic via [Flickr](https://www.flickr.com/people/26344495@N05/) under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/).*
 
-<!-- 100-word intro. Some possibilities:
-
-- Riff on quote by Friedman ~18 mins into UK interview you recently watched on YouTube. He makes a great point: AI was not mentioned at all during the recent U.S. presidential election. Yikes.
-
-- Are more altcoin ETFs on the way now that US regulation is easing? Bloomberg TV reporter raised this possibility.
-
-- What about companies putting BTC in their treasury? Recent comments by MicroStrategy -- and their long-term accumulation -- could be a good hook to address it.
-
-- Riff on wtf happened in '71: https://wtfhappenedin1971.com/ | McCormack episode that shouted it out: https://whatbitcoindid.libsyn.com/steve-baker-on-why-government-is-failing-you-mob020
-
--->
+<!-- 100-word intro based on wiplist... -->
 
 ### Week in Review: Dec. 1-7, 2024
 
+- Appeals court upholds law that could lead to a U.S. ban of TikTok. https://www.washingtonpost.com/technology/2024/12/06/tiktok-ban-court-ruling-justice-department-bytedance/
+
+- United Health: https://www.nytimes.com/2024/12/06/opinion/united-health-care-ceo-shooting.html
+
+- Hawk Tuah memecoin.
+
+- Australia banned social media for anyone under 16. <!-- Link TK -->
+
+- Intel's CEO retired. <!-- Link tk -->
+
+- PayPalUSD intvu. <!-- Bloomberg covered. Get link, if it's worth including in the newsletter. -->
+
 - Google news searches... Blockchain: https://news.google.com/search?q=blockchain&hl=en-US&gl=US&ceid=US%3Aen | Crypto: https://news.google.com/search?q=crypto&hl=en-US&gl=US&ceid=US%3Aen | Web3: https://news.google.com/search?q=web3&hl=en-US&gl=US&ceid=US%3Aen
+
+- Catch up on Bloomberg Crypto. <!-- Get link off YouTube -->
 
 - Crypto czar appointment? US bitcoin reserve? <!-- Keep an eye on these proposals. Update later in the week. -->
 
-- tk
+https://www.vulture.com/article/ben-mezrich-books-movies-film-adaptations-hollywood.html
 
-- tk
+https://www.pressforward.news/how-infrastructure-is-foundational-to-local-news/
+
+https://www.coindesk.com/business/2024/12/05/usdc-issuer-circle-makes-layoffs-as-part-of-operations-review-bloomberg
+
+https://decrypt.co/294953/blackrocks-ibit-hits-50-billion-in-record-time-as-bitcoin-surges-past-100000
+
+https://www.economist.com/the-world-ahead/2024/11/20/calendar-2025
+
+https://doctorow.medium.com/https-pluralistic-net-2024-11-02-ulysses-pact-tie-yourself-to-a-federated-mast-b2f89bb5b4d8
+
+https://www.searchenginejournal.com/bluesky-emerges-as-traffic-source-publishers-report-3x-engagement/534095/
+
+https://www.zdnet.com/article/7-things-to-know-about-bluesky-before-you-join-and-why-you-should/
+
+https://www.wsj.com/business/media/comcast-greenlights-7-billion-spinoff-of-nbcuniversal-cable-channels-cc5c6dc5?page=1
+
+https://www.msn.com/en-us/money/other/goblue-s-new-app-lets-you-track-your-bluesky-stats/ar-AA1v8rKh
+
+- https://www.coindesk.com/business/2024/11/07/coinbase-brings-bitcoin-to-solana-spurring-high-hopes-for-defi-surge/
+
+- How crypto is revolutionizing philanthropy. ([Salon](https://www.salon.com/2024/11/07/beyond-the-scandals-how-crypto-is-quietly-revolutionizing-philanthropy/))
+
+- HBR: Moderators alone can't protect online communities. https://hbr.org/2024/11/why-moderators-cant-protect-online-communities-on-their-own
+
+- Asteroid mining company SpaceForge got an FCC license. https://www.space.com/space-exploration/tech/asteroid-mining-company-astroforge-gets-1st-ever-fcc-license-for-commercial-deep-space-mission
+
+### Inflation -- and the "everything rally" in asset markets -- will be back.
+
+https://www.washingtonpost.com/opinions/2024/11/06/election-2024-trump-celebrity-inflation-incumbent/
+
+- https://www.salon.com/2024/11/06/the-illusion-of-donald-and-the-fourth-founding-of-america/
+
+
+- We're going to get more tied to Wall Street.
+
+- Web3 is a vehicle for global collaboration, better than government or diplomacy.
+
+- To heal the U.S., fix the dollar.
+
+
+5 things politicians are getting wrong about crypto
+
+- No, it's not all a scam.
+- No, it's not going to just go away.
+- The difference between network protocols and companies built on top of them.
+- The flaws in their own dollar-based system.
+- The causes of inflation.
+
+String from the last few weeks. Some of this may be useful for newsletter, or perhaps social posts...
+
+- https://www.wsj.com/tech/personal-tech/password-security-two-factor-authentication-bank-email-phone-42a5f4cf?st=uTPpg6&reflink=desktopwebshare_permalink
+
+- VC's are embracing web3 + AI: https://www.coindesk.com/business/2024/10/24/why-web3-vcs-are-embracing-cryptoai/ |  Andreessen on AI models: https://techcrunch.com/2024/10/22/marc-andreessen-says-ai-model-makers-are-in-a-race-to-the-bottom-and-its-not-god-for-business/
+
+- Games that pay BTC to play: https://decrypt.co/205392/bitcoin-booming-you-earn-more-playing-free-games
+
+- New blockchain trilemma: https://www.coindesk.com/opinion/2024/10/18/the-new-blockchain-trilemma-is-here-and-its-not-about-technology/
+
+- Andreesen funded AI becomes a millionaire: https://www.theblock.co/post/322002/marc-andreessen-funded-ai-bot-becomes-a-millionaire-after-fartcoin-holdings-rally
+
+- Citadel's Griffin on what's wrong with Media: https://fortune.com/2024/10/11/citadel-ken-griffin-media/ <!-- Probably a good social share as well.
+
+- Talking career goals in intvus: https://www.fastcompany.com/91205202/how-should-i-talk-about-my-career-goals-in-an-interview
+
+- https://www.coindesk.com/policy/2024/11/07/detroiters-will-be-able-to-pay-their-taxes-in-crypto-next-year-using-paypal/
+
+- Michigan's state pension system is expanding its crypto holdings. https://decrypt.co/290161/michigan-state-pension-fund-expands-crypto-holdings-10m-ethereum-buy
+
+- A FERC ruling dampened hopes that nuclear power plants will be able to sell power to tech companies at the scale they'd hoped for. https://www.wsj.com/business/energy-oil/nuclear-energys-ai-boom-blew-a-fuseheres-what-could-happen-next-aecb9724?st=5YwVgw&reflink=desktopwebshare_permalink
+
+- Nvidia added to the Dow. <!-- Link TK
+
+- Meta expands AI access to DoD. Hmmm... https://decrypt.co/290197/meta-ai-us-defense
+
+- Mt. Gox update: https://decrypt.co/290182/mt-gox-moves-2-2-billion-in-bitcoin-following-pushback-on-repayment-timeline
+
+- ChatGPT adds search: https://www.technologyreview.com/2024/11/05/1106603/how-chatgpt-search-paves-the-way-for-ai-agents/
+
+- Goodall on people's bad tendencies versus those of chimps. https://wapo.st/3UCZwSO
+
+- Collectible banknotes are a $500 million a year market. https://www.wsj.com/finance/currencies/paper-money-banknote-collectors-1e57b07a?st=KVMagy&reflink=desktopwebshare_permalink
+
+- For the annual report (and maybe LinkedIn): Article on the commodification of bitcoin... https://slate.com/business/2024/08/cryptocurrency-bitcoin-share-price-nikkei-dow-nasdaq-sp-stock-market-crash.html
+
+- Twitter, LinkedIn, Substack Notes: Goldman forecast: https://www.investopedia.com/wave-goodbye-to-the-stock-market-s-historic-run-goldman-sachs-says-8731471
+
+- LinkedIn: Forbes article on Griffin media remarks. Pickup url from WiR draft...
+
+- Twitter, LinkedIn: https://slate.com/technology/2024/10/gold-prices-record-breaking-investing-stock-market-crypto.html
 
 ### Community
 
