--- a/2024/2024-12-18-giftsubs.md
+++ b/2024/2024-12-18-giftsubs.md
@@ -12,6 +12,6 @@ With a paid subscription, your friends and loved ones will enjoy full access to 
 
 Of course, you'll also be helping them stay abreast of the latest on Bitcoin, Ethereum, AI, and other emerging technologies throughout 2025.
 
-Given the pace of innovation lately, the need to stay updated is more urgent than ever. The w3w newsletter is curated each week to help both tech-industry insiders and newbies alike do that in an accessible way.
+Considering the torrid pace of innovation lately, the need to stay updated is more urgent than ever. The w3w newsletter is curated each week to help both tech-industry insiders and newbies alike do that in an accessible way.
 
-**Why not give the gift of a w3w subscription today? To buy for an individual, see our options [here](https://w3wnews.substack.com/subscribe?simple=true&next=https%3A%2F%2Fw3wnews.substack.com%2F&gift=true). For group discounts, [click here](https://w3wnews.substack.com/subscribe?simple=true&next=https%3A%2F%2Fw3wnews.substack.com%2F&group=true).** 🎅🎄🤶🎁
+**Get someone a gift subscription to w3w today! To buy for an individual, see our options [here](https://w3wnews.substack.com/subscribe?simple=true&next=https%3A%2F%2Fw3wnews.substack.com%2F&gift=true). For group discounts, [click here](https://w3wnews.substack.com/subscribe?simple=true&next=https%3A%2F%2Fw3wnews.substack.com%2F&group=true).** 🎅🎄🤶🎁
