--- a/2024/2024-12-22-wir.md
+++ b/2024/2024-12-22-wir.md
@@ -6,26 +6,26 @@
 
 <!--
 
-100-word intro.
+100-word intro. Leading candidate is a riff on El Salvador...
 
-bitcoin plus
+El Salvador scaled back its bitcoin comittment in order to get a loan from the International Monetary Fund. The move is undeniably a setback for the bitcoin community, which had hailed El Salvador's adoption of bitcoin as legal tender in TKTKTKTKTK as a harbinger of similar moves in other countries. At the same time, it should be noted that IMF's predictions of economic doom at the time have never quite come to pass.
 
 -->
 
 ### Week in Review: Dec. 15-21, 2024
 
+- **AI updates:** The MIT Technology Review reports that tech companies' quest for more robust power sources for electricity-hungry AI applications is [growing more urgent](https://www.technologyreview.com/2024/12/17/1108894/ais-search-for-more-energy-is-growing-more-urgent/). Nuclear generation remains a big focus, considering that emissions from conventionally powered stations have risen sharply in the U.S... Based on interviews with hundreds of AI experts, consumers, and skeptics, Harvard Business Review says humans [still have an edge](https://hbr.org/2024/12/where-humans-still-have-the-edge-on-ai) over the technology in four areas: emotion, complexity, physicality, and creativity.  
 
 <!-- Possible social shares. These could also be good news summary items for w3w... -->
 
-- WaPo's Newsprint: https://www.washingtonpost.com/subscribe/static/newsprint/2024/share/7a37acdd7157c4f2/
+** BK's spot in crypto history: https://www.decential.io/articles/brooklyns-place-in-crypto-history-began-behind-this-tagged-up-front-door-in-bushwick
+
 
 - 8 worst tech trends of '24. https://www.technologyreview.com/2024/12/17/1108883/the-8-worst-technology-failures-of-2024/
 
-- HBR on where people still have advantages over AI: https://hbr.org/2024/12/where-humans-still-have-the-edge-on-ai
 
 - Databricks has quietly become one of Silicon Valley's hottest startups, recently closing a $10 billion funding round at a $62 billion valuation for the company. https://www.wsj.com/tech/ali-ghodsi-databricks-ceo-ai-4a1043aa?st=xfwJjr&reflink=desktopwebshare_permalink
 
-- MIT Tech Review: AI's search for energy sources is growing more urgent. https://www.technologyreview.com/2024/12/17/1108894/ais-search-for-more-energy-is-growing-more-urgent/
 
 
 - For SOCIALS and/or w3w...
@@ -110,7 +110,8 @@ Newsletter adds...
 
 ### Odds & Ends
 
-- BK's spot in crypto history: https://www.decential.io/articles/brooklyns-place-in-crypto-history-began-behind-this-tagged-up-front-door-in-bushwick
+- Behold the coffee badgers: https://www.youtube.com/watch?v=mJG4MdepNSA
+
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
