Final draft for 22 Dec 2024

--- a/2024/2024-12-22-wir.md
+++ b/2024/2024-12-22-wir.md
@@ -1,124 +1,77 @@
-# tktk
+# AI's pre-holiday rush
 ## Week in Review: Dec. 15-21, 2024
 
-![Investor holding up a physical ether coin](https://w3w.news/img/eth-2048.jpg)
-*Unedited photo by Ivan Radic via [Flickr](https://www.flickr.com/people/26344495@N05/) under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/).*
+![A gift-wrapped smartphone with other gifts](https://w3w.news/img/chaffins-3000.jpg)
+*Photo by [Sammie and Micah Chaffin](thechaffins.co) via Unsplash*
 
-<!--
+**Before we get to the latest headlines,** some brief housekeeping notes sregarding the w3w newsletter:
 
-100-word intro. Leading candidate is a riff on El Salvador...
+This will be my last Week in Review for 2024, returning to my regular publishing cadence every Sunday on Jan. 12. Like a lot of you, I'm going to be spending a lot of time with friends and family this holiday season. So I think it just makes sense for us all to take a little break from weekly updates.
 
-El Salvador scaled back its bitcoin comittment in order to get a loan from the International Monetary Fund. The move is undeniably a setback for the bitcoin community, which had hailed El Salvador's adoption of bitcoin as legal tender in TKTKTKTKTK as a harbinger of similar moves in other countries. At the same time, it should be noted that IMF's predictions of economic doom at the time have never quite come to pass.
+I'm also finalizing exclusive webinar content for paid subscribers in January. My Year in Review & 2025 Outlook webinar will be 16 UTC on Friday, Jan. 3. And my first of several Intro to Web 3 presentations for the year will take place 21 UTC on Tuesday, Jan. 7.
 
--->
+If you're a paid subscriber to w3w, I'll be emailing further conference details for the above events under seperate cover shortly. So please keep an eye out.
+
+If you're *not* yet a paid subscriber, there is yet time to get on the invite lists for the above by signing up for a paid sub [here](https://w3wnews.substack.com/subscribe).
+
+Finally, if you're still holiday shopping for loved ones, colleagues, or employees, w3w has you covered with our discounted gift subscriptions, including options for either [individuals](https://w3wnews.substack.com/subscribe?simple=true&next=https%3A%2F%2Fw3wnews.substack.com%2F&gift=true) or [groups](https://w3wnews.substack.com/subscribe?simple=true&next=https%3A%2F%2Fw3wnews.substack.com%2F&group=true). 🎁 😊
 
 ### Week in Review: Dec. 15-21, 2024
 
-- **AI updates:** The MIT Technology Review reports that tech companies' quest for more robust power sources for electricity-hungry AI applications is [growing more urgent](https://www.technologyreview.com/2024/12/17/1108894/ais-search-for-more-energy-is-growing-more-urgent/). Nuclear generation remains a big focus, considering that emissions from conventionally powered stations have risen sharply in the U.S... Based on interviews with hundreds of AI experts, consumers, and skeptics, Harvard Business Review says humans [still have an edge](https://hbr.org/2024/12/where-humans-still-have-the-edge-on-ai) over the technology in four areas: emotion, complexity, physicality, and creativity.  
+**There's been so much late-year news about AI in particular of late**, let's just cover it in a list unto itself. Feel free even to check the list twice, if you like:
 
-<!-- Possible social shares. These could also be good news summary items for w3w... -->
+- **New research by Anthropic** suggests that safety filters on AI apps are often laughably easy to work around. For example, an ostensible rule forbidding answers to queries about bombmaking might be thwarted by instead asking how to make a "b0mB." ([Decrypt](https://decrypt.co/298397/anthropic-jailbreak-bypass-ai-restrictions-censorship))
 
-** BK's spot in crypto history: https://www.decential.io/articles/brooklyns-place-in-crypto-history-began-behind-this-tagged-up-front-door-in-bushwick
+- **OpenAI's new Orion project** is behind schedule, running up big expenses, and facing tricky technical challenges. Sigh. ([Wall Street Journal](https://www.wsj.com/tech/ai/openai-gpt5-orion-delays-639e7693?st=rGtERy&reflink=desktopwebshare_permalink))
+
+- **The MIT Technology Review reports** that tech companies' quest for more robust power sources for electricity-hungry AI applications is [growing more urgent](https://www.technologyreview.com/2024/12/17/1108894/ais-search-for-more-energy-is-growing-more-urgent/). Nuclear generation remains a big focus, considering that emissions from conventionally powered stations have risen sharply in the U.S.
+
+- **Based on interviews with hundreds of AI experts,** consumers, and skeptics, Harvard Business Review says humans [still have an edge](https://hbr.org/2024/12/where-humans-still-have-the-edge-on-ai) over the technology in four areas: emotion, complexity, physicality, and creativity.  
+
+- **Fortune profiled** Amazon Web Services CEO Matt Garman, with a focus on [his plans](https://news.google.com/read/CBMihAFBVV95cUxQUmtkYjhsWUNNeXgxWnEzLV9jeGRXQ3h5d3NhbEtELXplV1lsaG13TkpSQnJsRldIT3lud3ZzeU41OEVsSzJEMnJkTHZXNExGUzB5Nm93REhZUXJVckQzc0EtbXZRNjJjVWxrV2h2V25NZXZ3c1FLaXJ5TXJWMDZDak96SVU?hl=en-US&gl=US&ceid=US%3Aen) to make the cloud provider dominant in AI.
+
+- **ICYMI:** The Wall Street Journal's recent interview with Nvidia CEO Jensen Huang, who has transformed the chipmaker by dominating the AI hardware race so far, is also [worth a look]().
+
+**Of course, the elves elsewhere in tech world** have been busy making some non-AI goodies as well -- and doling out the occasional lump of coal. Let's see what they've been up to:
+
+- **Crypto's late-year rally paused,** hobbled in part by [concerns](https://decrypt.co/298227/bitcoin-etfs-record-high-outflows-672-million) America's Federal Reserve will take a more stringent anti-inflation stance in the New Year. In recent trading, bitcoin posted a 7-day decline of 8%, and ether was down 16%.
+
+- **Tether invested $775 million in Rumble,** including plans to add crypto payments to the erstwhile YouTube copetitor. ([CoinDesk](https://www.coindesk.com/business/2024/12/20/tether-takes-75-m-stake-in-video-sharing-platform-rumble))
+
+- **El Salvador scaled back its pro-bitcoin policies** in order to secure a $1.4 billion loan from the International Monetary Fund. In particular, the Latin American country, which now recognizes bitcoin as legal tender alongside the U.S. dollar, agreed to accept tax payments only in greenbacks. But the Salvadoran treasury, which currently holds nearly $600 million in bitcoin, has continued incremental purchases of the token. ([Reuters](https://duckduckgo.com/?q=imf+bitcoin+warning+%27el+salvador%27&ia=web))
+
+- **Japanese investment firm Metaplanet** announced a plan to use debt to add to its bitcoin holdings, echoing the tactics of U.S.-based MicroStrategy. ([Decrypt](https://decrypt.co/298291/metaplanet-raises-61-million-buy-bitcoin))
+
+- **FWIW & FYI:** This is exactly the sort of move I anticipated in [last week's newsletter](https://w3wnews.substack.com/p/are-microstrategy-imitators-on-the). Speaking of which...
+
+- **MicroStrategy is poised** to join the Nasdaq 100 [on Monday](https://news.google.com/read/CBMiugFBVV95cUxNdXluQUY3QkRRNmJDZ2p0TzZqc1F1SjRfa2lMX29EZTNrZzVTNmFsWUMxY3pHbFU4WWc2RUtHcGw5cVBscE1YNlh1aXpOd0FTNjhkbng3UjFJeVdfZGU2WllZQzRTRWR4Si1IOXM2WGtGWVF1LWItdFhETklDckpCdEJfT1pOY05xMGtfTWdZTk9zUTB0cWN5b3JxczZkbjlzZEp0MXVib2RHVVdRU2xVaVdaUzN0YUIxVlE?hl=en-US&gl=US&ceid=US%3Aen). Separately, the company just [named three new directors](https://www.theblock.co/post/332102/microstrategy-names-former-binance-us-ceo-brian-brooks-two-others-to-board-of-directors ) to its board, all of them with backgrounds in the crypto industry. And company founder Michael Saylor spoke out [in favor](https://www.theblock.co/post/332065/microstrategy-founder-michael-saylor-advocates-for-trump-backed-strategic-bitcoin-reserve-in-proposal-to-set-crypto-industry-standards) of proposals for the U.S government to create a strategic bitcoin reserve.
+
+- **Anchorage Digital got a BitLicense from New York regulators.** The certification, one of the most stringent state-level crypto licenses in the U.S., gives Anchorage better access to offer tokenized services to Wall Street institutions. ([Decrypt](https://decrypt.co/297073/anchorage-digital-bitlicense-new-york))
+
+- **Coinbase delisted wBTC** "due to the unacceptable risk" that the top bitcoin stand-in on Ethereum "would fall into the hands of Justin Sun," the exchange said Tuesday in response to a lawsuit over its decision. ([CoinDesk](https://www.coindesk.com/business/2024/12/17/coinbase-says-it-nixed-w-btc-because-justin-sun-posed-unacceptable-risk))
+
+- **Interpol issued a “red notice”** seeking the arrest of Hex and PulseChain founder Richard James Schueler. He faces charges of tax evasion and assault in Finland. ([The Block](https://www.theblock.co/post/332106/hex-founder-richard-heart-wanted-by-interpol-europol-on-charges-of-tax-evasion-and-assault))
 
 
-- 8 worst tech trends of '24. https://www.technologyreview.com/2024/12/17/1108883/the-8-worst-technology-failures-of-2024/
+<!--
 
-
-- Databricks has quietly become one of Silicon Valley's hottest startups, recently closing a $10 billion funding round at a $62 billion valuation for the company. https://www.wsj.com/tech/ali-ghodsi-databricks-ceo-ai-4a1043aa?st=xfwJjr&reflink=desktopwebshare_permalink
-
-
-
-- For SOCIALS and/or w3w...
-
-- Economist in "Chinese MAGA": https://www.economist.com/china/2024/12/09/maga-with-chinese-characteristics
-
-- Economist on the hidden cost of Chinese loans: https://www.economist.com/finance-and-economics/2024/12/05/the-hidden-cost-of-chinese-loans
-
-- Economist on declining adult intelligence in OECD: https://www.economist.com/finance-and-economics/2024/12/10/are-adults-becoming-less-intelligent
-
-- Economist on the virtues of US gambling: https://www.economist.com/briefing/2024/12/05/gambling-is-growing-like-gangbusters-in-america
-
-- WSJ on US workers skillz deteriorating: https://www.wsj.com/us-news/america-us-math-proficiency-falling-1b5ac73c?st=WXi4BW&reflink=desktopwebshare_permalink
-
-- Lashinsky on Musk: https://www.washingtonpost.com/opinions/2024/12/03/elon-musk-twitter-doge-trump-x/
-
-- WaPo on managing seasonal stress: https://www.washingtonpost.com/wellness/2024/12/08/holiday-stress-management-tips/
-
-- Mets/Yanks post-Soto: https://www.wsj.com/sports/baseball/juan-soto-mets-steve-cohen-yankees-8674176d?mod=hp_featst_pos4
-
-- WSJ intvu with Nvidia CEO Huang: https://www.wsj.com/business/nvidia-jensen-huang-book-advice-b9794576?mod=wknd_pos1
-
-- Small class of McKinsey partners: https://www.wsj.com/business/mckinsey-promotes-its-smallest-group-of-partners-in-years-8238e3a1?mod=lead_feature_below_a_pos1
-
-- Prof G intvu with Michael Saylor: https://podcasts.apple.com/us/podcast/why-microstrategy-bought-%2440-billion-worth-of/id1744631325?i=1000679321479
-
-- WSJ on aging Chinese cities: https://www.wsj.com/world/china/china-elderly-aging-babies-fertility-coal-mines-43c0b34f?mod=hp_lead_pos9
-
-- New OpenAI video product Sora https://www.washingtonpost.com/technology/2024/12/09/sora-launch-openai-ai-video/
-
-- A slam dunk for O+E... https://www.washingtonpost.com/science/2024/12/09/mars-rover-perseverance-jezero-crater-lookout-hill/
-
-Newsletter adds...
-
-- Timaros Fed outlook: https://www.wsj.com/economy/central-banking/federal-reserve-interest-rates-2025-1c5cc687?mod=central-banking_more_article_pos4
-
-- WaPo's Fisher on Germany: https://www.washingtonpost.com/opinions/2024/12/17/scholz-germany-no-confidence-vote/
-
-- WaPo's Porter on US move away from globalization: https://www.washingtonpost.com/opinions/2024/12/17/globalization-trump-poverty-disurption-trade/
-
-- WSJ year in review: https://www.wsj.com/world/2024-biggest-news-stories-timeline-bdaf3be6?mod=hp_featst_pos4
-
-- Chinese router maker under investigation in the U.S. https://www.wsj.com/politics/national-security/us-ban-china-router-tp-link-systems-7d7507e6?st=zP6ubC&reflink=desktopwebshare_permalink
-
-- Guinness shortage in the UK? https://www.wsj.com/business/guinness-shortage-rising-demand-popularity-47400614?st=qsv9pa&reflink=desktopwebshare_permalink
-
-- Also, its Christmas trees are a mess. https://www.washingtonpost.com/opinions/2024/12/17/christmas-trees-uk-humor/
-
-- NYDN story re: Rochester guys dying from fertilizing their weed plants with bat guano
-
-- Oxford's word of the year is 'brain rot.' https://www.cnn.com/2024/12/02/world/brain-rot-oxford-word-of-the-year-2024-intl-scli-gbr/index.html
-
-<!-- Strictly for the newzletta... -->
-
-- Google news searches... Blockchain: https://news.google.com/search?q=blockchain&hl=en-US&gl=US&ceid=US%3Aen | Crypto: https://news.google.com/search?q=crypto&hl=en-US&gl=US&ceid=US%3Aen | Web3: https://news.google.com/search?q=web3&hl=en-US&gl=US&ceid=US%3Aen
-
-- Coinbase says it nixed wBTC because Justin Sun posed "an unacceptable risk." https://www.coindesk.com/business/2024/12/17/coinbase-says-it-nixed-w-btc-because-justin-sun-posed-unacceptable-risk
-
-- Market updates: New BTC records, etc. <!-- Links tktk -->
-
-- Sen. Tim Scott https://www.coindesk.com/policy/2024/12/17/next-u-s-senate-banking-chair-calls-crypto-next-wonder-of-world
-
-- Sonneshein appointed at Securitize. <!-- Link TK -->
-
-- Pudgy Penguins airdrop. <!-- Link TK -->
-
-- Anchorage digital gets an NY state BitLicense. https://decrypt.co/297073/anchorage-digital-bitlicense-new-york
-
-- Nigeria arrests 800 scammers: https://decrypt.co/297099/nigeria-arrests-800-crypto-romance-scam
-
-- Sacks as 'crypto and ai czar.' <!-- Named Dec 5: https://truthsocial.com/@realDonaldTrump/posts/113603133222686186 | Need to update -->
-
-- Nic Carter quote to Bloomberg Crypto: "When you're a bitcoiner, you're in the trade with a lot of delusional people."
-
-- Will the U.S. create as strategic bitcoin reserve? <!-- Links tktk -->
-
-- On deck: MicroStrategy joins the Nasdaq 100 on Monday. <!-- Links tktk -->
-
-### Community
-
-<!-- Pickup from previous weeks as needed... -->
+CBK items...
+-->
 
 ### Odds & Ends
 
-- Behold the coffee badgers: https://www.youtube.com/watch?v=mJG4MdepNSA
+- **What's up with Britain?** Honestly, I say this with love from across the pond. But damn. According to recent U.S. press coverage, the U.K. is somehow [running low on Guinness](https://www.wsj.com/business/guinness-shortage-rising-demand-popularity-47400614?st=qsv9pa&reflink=desktopwebshare_permalink), the Christmas tree in Trafalgar Square is [underwhelming](https://news.google.com/read/CBMiggFBVV95cUxPNlBwNHJxWng1el9FTk1TZ2dPU0RHZ1hSdzYxa0FkSjJlWndpTEVlZ3huc0YzZ1BENGZvaURsaktIekVicGdzbmpjMERCQWVuVmxjNUJzb2tlMlFQWTBsbFRBaFJqdXRDY216ZmtwX0xLN3ZacGQ1OWZIWFdkU0RzQVd3?hl=en-US&gl=US&ceid=US%3Aen), and Barbara Broccoli, lead producer of the James Bond film series, is [at an impasse](https://www.wsj.com/business/media/james-bond-movies-amazon-barbara-broccoli-0b04f0db?reflink=desktopwebshare_permalink) with distributor MGM's new owner Amazon over when the next 007 movie should come out.
 
+- **Oxford University Press named "brain rot" its word for the year.** The venerable dictionary publisher says usage of the term, which refers to the sensation after you spend too much time scrolling aimlessly on the internet, rose 230% in 2024. But its first documented use was by Henry David Thoreau in the 19th century. ([CNN](https://www.cnn.com/2024/12/02/world/brain-rot-oxford-word-of-the-year-2024-intl-scli-gbr/index.html))  
+
+- **Behold "coffee badging."** It's the increasingly common practice of an employee swiping their chipped ID badge at the office in the morning, attending a meeting or two, having a cup of coffee, and then leaving to work from home the rest of the afternoon. In other words, a way of quietly revolting against corporate return-to-office policies. ([CNBC](https://www.youtube.com/watch?v=mJG4MdepNSA))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
-_**About me: I'm a New York-based content creator with more than seven years' experience in web3. This newsletter grew out of the early stages of that journey, as I thought it might be useful to share what I was rapidly learning about blockchain tech and decentralization with other people getting up to speed on such stuff.**_
+_**About me: I'm a New York-based publisher with more than seven years' experience in web3. This newsletter grew out of the early stages of that journey, as I thought it might be useful to share what I was rapidly learning about blockchain tech and decentralization with other people getting up to speed on such stuff.**_
 
  _**During the COVID pandemic, I served as Head of Content for the censorship-resistant platform Blogchain. I have also done contract work for the World Economic Forum, the Telos Foundation, Dispatch Labs, and Vice News. Previously, I spent over a decade as an award-winning markets reporter at the Wall Street Journal.**_
 
  _**To reach me directly with feedback, a story suggestion, or other queries, please email peter[at]w3w[dot]media.**_
 
- _**Best wishes for a healthy and productive week ahead.**_ 😊
+ _**Have a happy holiday and propserous New Year! If you're going to be on the road -- or perhaps already are as we speak -- I wish you safe travels. See you in '25.**_ 🎄🎅🎉🍸
