Final draft for 12 Jan 2025

--- a/2024/2024-12-22-wir.md
+++ b/2024/2024-12-22-wir.md
@@ -4,7 +4,7 @@
 ![A gift-wrapped smartphone with other gifts](https://w3w.news/img/chaffins-3000.jpg)
 *Photo by [Sammie and Micah Chaffin](thechaffins.co) via Unsplash*
 
-**Before we get to the latest headlines,** some brief housekeeping notes sregarding the w3w newsletter:
+**Before we get to the latest headlines,** some brief housekeeping notes regarding the w3w newsletter:
 
 This will be my last Week in Review for 2024, returning to my regular publishing cadence every Sunday on Jan. 12. Like a lot of you, I'm going to be spending a lot of time with friends and family this holiday season. So I think it just makes sense for us all to take a little break from weekly updates.
 
