--- a/2025/2025-01-19.md
+++ b/2025/2025-01-19.md
@@ -1,36 +1,89 @@
-# tktktk
-### tktktk
+# A mess of our own making
+### America's on-and-off TikTok ban is a political perfect storm. What next?
 
-![A gift-wrapped smartphone with other gifts](https://w3w.news/img/chaffins-3000.jpg)
-*Right back atcha, Mark.*
+![A phone with the TikTok app starting up, in front of a Chinese flag](https://w3w.news/img/solen-feyissa-2400.jpg)
+*Photo by Solen Feyissa via Unsplash*
 
-<!-- 100-word lede item.  -->
+<!-- 100-word lede item. For this week, focus on TikTok ban... -->
+
+**Just to be clear before we proceed,** I am not a lawyer. On the other hand, I am also not pushing 80 years old, like most of the people running America's federal government.
+
+I offer the first disclaimer in case it's useful in ascribing value (or not) to my opinions on the current fiasco surrounding Americans' access to TikTok. I offer the second so you can better understand why it's happening.
+
+I've written previously that I see America's law requiring a sale of TikTok, or else a domestic ban, as a [glaring constitutional problem](https://peteramckay.medium.com/congress-isnt-going-to-fix-web2-7b1818ea9fc0). To effectively kick 175 million citizens off a forum they're already using to share information everyday seems to me like an obvious violation of their free-speech rights under our First Amendment. (I say that even though I choose not to participate in TikTok myself, by the way.)
+
+Our federal justice system disagreed when TikTok's lawyers advanced a similar free-speech argument in court appeals recently, all the way through a Supreme Court decision on Friday [upholding the law as-is](https://www.pbs.org/newshour/politics/read-the-full-supreme-court-ruling-upholding-ban-on-tiktok-if-not-sold-by-chinese-parent-company).
+
+Thus TikTok went dark in the U.S. Saturday evening, just ahead of a midnight deadline for a sale.
+
+But now, as of Sunday evening in New York, it's [back on again](https://www.reuters.com/technology/tiktok-goes-dark-us-users-trump-says-save-tiktok-2025-01-19/) because America's politicians seemingly decided they kind of agree with that whole First Amendment thing after all, quaint though it is. Or at least they now realize there are no votes to be gotten by inflicting *actual* harm on tens of millions of Americans over the theoretical harm they *might* suffer from foreigners who... wait for it... don't respect human freedom like we do?
+
+Make it make sense. Please.
+
+If there is a positive to be salvaged from this situation, I hope it's that Congress feels some impetus to quickly pass additional laws to add common sense to U.S. regulation of social media.
+
+In my opinion, the ideal would be one set of rules that applies fairly to *all* companies operating in the U.S., regardless of the owners' nationality. Focusing on that parameter alone is a relic of the twentieth-century, when we were worried primarily about protecting industrial assets like railroads and shipping ports from foreign manipulation.
+
+Social networks are different. Sure, it's not unreasonable to worry about possible influence of the Chinese Communist Party on TikTok as a shareholder in it. But we've also seen bad actors like Russia tangibly [harm our democratic discourse](https://www.bbc.com/news/technology-46590890) and that of [our Western allies](https://www.politico.eu/article/russia-influence-hackers-social-media-facebok-operation-thriving/) merely by exploiting poorly moderated, *American-owned* social networks like Facebook and Twitter as well.
+
+That's all it really takes in an internet-connected world. A foreign adversary just has to *use* a social app in a certain way to hurt us, whether they own that app or not.
+
+Thus it's better to regulate certain business practices (but not speech) at all the social networks uniformly and fairly, regardless of ownership. Clarify what privacy protections are required, what data and algorithms are auditable, what information about their operations they're required to share with the public, alerts on security breaches, the penalties for non-compliance, and so on.
+
+Frankly, TikTok in its current form probably would not comply with any such regulatory structure that truly protects America's security. But neither would social networks owned by some of the American billionaires who will literally [have front-row seats](https://www.nbcnews.com/politics/donald-trump/elon-musk-jeff-bezos-mark-zuckerberg-attend-trump-inauguration-rcna187642) at our new president's inauguration on Monday.
 
 ### Week in Review: Jan. 12-18, 2025
 
-<!-- Some articles related to bizdev for w3w... -->
+- **Solana soars.** The SOL token hit a new all-time high near $300 per coin on Sunday, helped by the successful launch of a Donald Trump memecoin on the Solana network. But the platform had seen increased adoption elsewhere as well recently for app development and other use cases. The SOL token has risen nearly 3,000% since its post-FTX lows in December 2022. ([CoinDesk](https://www.coindesk.com/markets/2025/01/19/solana-hits-275-lifetime-peak-as-official-trump-memecoin-surges-to-8-b))
 
-- https://hackernoon.com/7-content-loops-to-accelerate-sustainable-product-growth?source=rss
-- https://www.ibm.com/think/insights/ai-in-journalism?ref=hackshackers.com
+- **Tether CEO Paolo Ardoino** told Reuters the stablecoin giant is planning to [move its headquarters](https://www.reuters.com/technology/crypto-firm-tether-its-founders-finalising-move-el-salvador-2025-01-13/) to El Salvador. Tether, which was originally incorporated in the British Virgin Islands, recently obtained a key license in El Salvador to offer digital asset services. The company's USDT token is current the fourth-largest in the world, with a market valuation above $138 billion, according to [CoinMarketCap](https://coinmarketcap.com/currencies/tether/).
 
-### Community
+- **The Bank of England** is launching a "digital pound lab" as the next step in exploring possible implementation of an official digital currency in Britain. ([The Block](https://www.theblock.co/post/334514/bank-of-england-to-launch-digital-pound-lab-for-testing-cbdc-innovations))
 
-- tk
+- **Intesa Sanpaolo,** Italy's largest bank by total assets, bought $1 million worth of bitcoin, its first direct purchase of the token. ([The Block](https://www.theblock.co/post/334482/italy-largest-bank-intesa-bitcoin))
+
+- **Alkimiya unveiled** a new marketplace for betting on the network fees for Coinbase's popular layer-2 platform Base. ([CoinDesk](https://www.coindesk.com/business/2025/01/14/coinbase-s-layer-2-system-base-gets-a-marketplace-linked-to-gas-revenue))
+
+- **Sony launched the main network** for its on-chain platform Soneium. The network is designed to host digital collectibles for Sony entertainment properties, as well as projects for third-party developers. ([Cointelegraph](https://cointelegraph.com/news/sony-soneium-blockchain-launch-controversy))
+
+- **More startup deals:** Latest fundraising round makes crypto bank Sygnum a unicorn: https://www.coindesk.com/business/2025/01/14/crypto-bank-sygnum-gets-unicorn-status-with-58-m-round MoonPay bought payment processor Helio [for $175 million](https://www.coindesk.com/business/2025/01/13/moon-pay-buys-crypto-payment-processor-helio-for-175-m) Meanwhile, research firm Chainalysis acquired Israeli startup Alterya [for $150 million](https://www.coindesk.com/business/2025/01/13/chainalysis-buys-israeli-fraud-detection-startup-alterya-for-150-m).
+
+
+
+
+
 
 <!--
 
-Anand links...
 
-https://locusmag.com/2024/12/anand-vaidya-1976-2024/
+- SEC suing Musk. | Judges ask SEC to explain its refusal to make crypto rules: https://www.coindesk.com/policy/2025/01/13/u-s-judges-demand-sec-explain-itself-for-rebuffing-requests-for-crypto-rules
 
-https://philosophersmag.com/large-language-models-and-the-concept-of-bullshit/
 
-https://anandvaidya.weebly.com/
+
+- Cops misusing facial recognition https://www.washingtonpost.com/business/interactive/2025/police-artificial-intelligence-facial-recognition/
+
+- LA prefab housing
 
 -->
 
 ### Odds & Ends
 
-- tk
+**A fun personal update to share this week:** My wife Rochelle and I managed to snag tickets to the dress rehearsal for this weekend's historic Saturday Night Live, hosted by Dave Chappelle. Since the U.S. election in 2016, he's become SNL's go-to host whenever major political events happen here. So this year's pre-inauguration slot was just his cup of tea.
 
-<!-- Boilerplate. Pickup from last week... -->
+On SNL's live broadcast, Chappelle delivered a [17-minute opening monologue](https://www.youtube.com/watch?v=57pGarTBJrU), breaking his own previous record the for longest monologue in the show's 50-year history. That's also more than triple the typical monologue length and almost double the length of Chappelle's dress rehearsal yesterday, according to the TV-industry news site [LateNighter](https://latenighter.com/news/dave-chappelle-delivers-longest-monologue-in-snl-history/).
+
+As a firsthand witness to the rehearsal, I would add that about 80% of Chappelle's jokes in the live broadcast were different. In the early version, delivered around 8 p.m. ahead of the live broadcast at 11:30 in New York, there was no mention of Puffy Combs or Jimmy Carter -- topics he riffed about on-air at some length. And there were mentions you didn't see on TV regarding Kanye West and (more briefly) Chappelle's previous conflicts with the trans community.
+
+To me, the big changes just underscore Chappelle's comedic genius all the more. As I see it, he either did a near-total re-working of his set at the literal eleventh hour, or he purposefully kept two versions in his head all along to avoid the broadcast material leaking.
+
+Either way, an utterly amazing creative flow to watch. Wow.
+
+_**That's it for now. Thanks for reading the newsletter today!**_
+
+_**About me: I'm a New York-based consultant and writer with more than seven years' experience in web3. This newsletter grew out of the early stages of that journey, as I thought it might be useful to share what I was rapidly learning about blockchain tech and decentralization at the time with other people doing the same.**_
+
+_**During the COVID pandemic, I served as Head of Content for the censorship-resistant platform Blogchain. I have also done contract work for the World Economic Forum, the Telos Foundation, Dispatch Labs, and Vice News. Previously, I spent over a decade as an award-winning markets reporter at the Wall Street Journal.**_
+
+ _**If you need to reach me directly for any reason, please email peter[at]w3w[dot]media.**_
+
+ _**Best wishes for a healthy and productive week ahead.**_ 😊
